# server/src/module/hospital/doctor/entity/doctor.entity.ts
@@ -16,11 +16,17 @@ export class HospitalDoctorEntity extends BaseEntity{
     @Column({ type: 'varchar',name: 'doctor_name', comment: '医生姓名' })
     doctorName: string;
 
+    @Column({ type: 'varchar',name: 'doctor_phone', comment: '医生联系方式' })
+    doctorPhone: string;
+
     @Column({ type: 'varchar',name: 'doctor_avatar', comment: '医生头像' })
     doctorAvatar: string;
 
-    @Column({ type: 'varchar',name: 'doctor_title', comment: '医生职称' })
-    doctorTitle: string;
+    @Column({ type: 'int',name: 'doctor_post_id', comment: '医生职称' })
+    doctorPostId: number;
+
+    @Column({ type: 'int',name: 'doctor_dept_id', comment: '医生所在科室' })
+    doctorDeptId: number;
 
     @Column({ type: 'varchar',name: 'doctor_intro', comment: '医生简介' })
     doctorIntro: string;
@@ -28,6 +34,6 @@ export class HospitalDoctorEntity extends BaseEntity{
     @Column({ type: 'varchar',name: 'doctor_good_at', comment: '医生擅长' })
     doctorGoodAt: string;
 
-    @Column({ type: 'int',name: 'is_recommend', comment: '是否推荐' })
+    @Column({ type: 'int',name: 'is_recommend', comment: '是否首页推荐' })
     isRecommend: number;
 }
